--- a/index.html
+++ b/index.html
@@ -77,22 +77,55 @@
     <div class="bottom-left-contents">
       <div class="card-contents">
         <h1>お支払い方法</h1>
+        <h2>代引引換え</h2>
+          <p>商品発送時に現金にてご決済いただくお支払い方法です。</p>
+          <br>
+          <p>※代引手数料として、別途324円が必要となります。</p>
+          <br>
+          <p>代引引換手数料はお客様のご負担となりますのでご了承ください。</p>
+        <h2>クレジット決済</h2>
+          <p>オンラインによるリアルタイム決済です。オンライン決済の際には、クレジット決済代行会社「abc」のサイトに移動します。なお、その際にクレジットカード番号等を含むデータは、SSLよりセキュリティを確保したうえで送信されますので、安心してご利用いただけます。お支払い回数は1回とさせていただきます。ご利用いただけるカードはVISA/Masterの2種類です。</p>
+        <h2>コンビニ決済</h2>
+          <p>全国のコンビニでお支払いいただけます。商品注文後、14日以内にお近くのコンビニにてお支払い下さい。商品の発送は、お支払いが確認できてからの発送になりますので、お支払いが遅れますと商品の到着が遅れてしまいますのでご注意下さい。</p>
       </div>
         <div class="card-contents">
           <h1>配送・送料について</h1>
+          <h2>配送</h2>
+            <p>ゆうパックにて配送いたします。詳細は、「お支払い・送料について」のページをご覧ください。</p>
+            <h2>送料について</h2>
+              <p>送料は、<span>北海道・九州・沖縄を除く全国540円とさせていただきます。</span></p><br>
+              <p><span>(北海道・九州・沖縄は864円)</span></p><br>
+              <p>送料の詳細については、「お支払い・送料について」のページをご覧ください。</p>
+          <h2>時間指定配送可能な時間帯</h2>
+        <ul>
+          <li>午前中</li>
+          <li>12時〜14時</li>
+          <li>14時〜16時</li>
+          <li>16時〜18時</li>
+          <li>18時〜20時</li>
+          <li>20時〜21時</li>
+        </ul>
+        <p>上記の時間帯にて配送時間の指定が可能です。</p>
         </div>
       </div>
 
       <div class="bottom-right-contents">
         <div class="card-contents">
           <h1>ご注文方法</h1>
+          <h2>インターネットによるご注文</h2>
+            <p>※注文メール・メールの返信が来ないとういお客様へ</p>
+            <br>
+            <p>Yahoo!メール等一部のフリーメールアドレスをお使いのお客様におかれまして、当店からの自動返信メール等が迷惑メールと間違われてしまい、迷惑メールフォルダに自動的に振り分けられてしまう等の事象が発生しております。当店からのメールが届かないと思われている方におきましては、一度迷惑メールフォルダの中身をご確認いただければと思います。</p>
           </div>
 
           <div class="card-contents">
             <h1>個人情報保護方針</h1>
+            <h2>SSL通信</h2>
+              <p>着物通販ショップ「きもの屋さん」は、利用者からお預かりする個人情報の保護を重要視し、その利用、保管にあたり最新の注意を払い、個人情報の保護に努めております。また、会員登録の際の記載内容の送信や、注文フォームからの注文内容の際には、すべてSSL通信で送信されますので安心してご利用いただけます。</p>
           </div>
           <div class="card-contents">
             <h1>返品・交換について</h1>
+            <p>商品の品質・発送につきましては万全を期しておりますが、万一不良品がございましたら返送料着払いで返品してください。お客様の都合で返品される場合は、到着日より8日以内に返品してください。また、その際の返送料は、自己負担でお願いします。</p>
           </div>
         </div>
       </div>
