--- a/index.html
+++ b/index.html
@@ -9,30 +9,34 @@
 <header>
   <div class="header">
     <div class="logo-image">
-      <div class="header-logo">着物通販ショップ「きもの屋さん」</div>
+      <div class="logo-image-mask">
+        <p>着物通販ショップ「きもの屋さん」</p>
       </div>
-        <div class="header-list">
+    </div>
+    <div class="header-list">
         <ul>
           <li><a href="#">マイページ</a></li>
           <li><a href="#">カゴの中を見る</a></li>
         </ul>
-        </div>
       </div>
+  </div>
 </header>
 
 
 <body>
-<div class="main-block">
-  <div class="main">
-    <div class="menu-list">
-      <ul>
-        <li><a href="#">Topページ</a></li>
-        <li><a href="#">販売商品一覧</a></li>
-        <li><a href="#">お買い物の流れ</a></li>
-        <li><a href="#">お支払い・送料について</a></li>
-        <li><a href="#">特定商取引法の表示</a></li>
-        <li><a href="#">プライバシーポリシー</a></li>
-      </ul>
+  <div class="main-block">
+    <div class="main">
+      <div class="menu-list">
+        <ul>
+          <li><a href="#">Topページ</a></li>
+          <li><a href="#">販売商品一覧</a></li>
+          <li><a href="#">お買い物の流れ</a></li>
+          <li><a href="#">お支払い・送料について</a></li>
+          <li><a href="#">特定商取引法の表示</a></li>
+          <li><a href="#">プライバシーポリシー</a></li>
+        </ul>
+      </div>
+
       <div class="login-area">
           <form>
             <p>ログイン</p>
@@ -42,16 +46,20 @@
             <input name="パスワード">
             <input type="submit" value="ログイン">
           </form>
+        </div>
+
+      <div>
+        <div class="menu-button-list">
           <ul>
-            <li>よくあるご質問</li>
-            <li>浴衣特集</li>
-            <li>おすすめ着付教室</li>
-            <li>着付に必要な道具リスト</li>
-            <li>あると便利な小物</li>
+            <li><a href="#">よくあるご質問</a></li>
+            <li><a href="#">浴衣特集</a></li>
+            <li><a href="#">おすすめ着付教室</a></li>
+            <li><a href="#">着付に必要な道具リスト</a></li>
+            <li><a href="#">あると便利な小物</a></li>
           </ul>
-      </div>
+        </div>
     </div>
-  </div>
+    </div>
 
   <div class="main-contents">
     <div class="container">
